# mcp-courseware

./: TRAE_MCP_SPEC_DRIVEN_GUIDE.md
.trae/rules/: mcp_project_rules.md
.trae/templates/: mcp-spec-template.md
docs/: seedream-api.md
mcp-server-seedream/: .env.example  .gitignore  pyproject.toml  run_server.py  test_import.py
mcp-server-seedream/src/mcp_server_seedream/: server.py
mcp-server-seedream/src/mcp_server_seedream/tools/: __init__.py  generate_image.py  generate_image_group.py
mcp-server-seedream/src/mcp_server_seedream/utils/: __init__.py  api_client.py  errors.py  formatters.py
my-first-mcp-server/: server.py
specs/: mcp-tutorial.md
tutorials/quickstart/: 01-what-and-why-mcp.md  02-mcp-basics-concepts.md  03-fastmcp-quickstart.md  04-extend-and-use.md  05-faq-and-next.md  INDEX.md  README.md  example-server.py
